fixed a couple styling issues and removed some excess whitespace

--- a/jeopardy_3/jeopardy_app/static/jeopardy/css/style.css
+++ b/jeopardy_3/jeopardy_app/static/jeopardy/css/style.css
@@ -92,12 +92,27 @@ image {
 }
 
 .splash {
-    background-color: violet;
+    background-color: rgb(0, 15, 146);
     z-index: 1000;
     height: 100vh;
     width: 100vw;
     position: absolute;
     top: 0;
+}
+
+.splash_p {
+    font-size: 10rem;
+    text-align: center;
+}
+
+.splash_back, #splash_next, .splash_answer {
+    font-size: 2rem;
+    border: 1px solid white;
+}
+
+.splash_back:hover, #splash_next:hover, .splash_answer:hover {
+    cursor: pointer;
+    background-color: grey;
 }
 
 
